--- a/index.html
+++ b/index.html
@@ -9,28 +9,125 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Other libraries go here -->
+    <!-- Bootstrap CSS and JS from CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Link to styles of your own -->
+    <!-- Link to your custom styles (optional) -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
-
 </head>
 
 <body>
+    <!-- =================== Navbar =================== -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary-subtle">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Pathfinder</a>
+            <img src="./images/Pathfinder.png" alt="PathFinder Logo" height="36" class="me-2">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link disabled" aria-disabled="true">Disabled</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
-    <!------------------------------>
-    <!-- Stuff for body goes here -->
+    <!-- =================== Hero Section =================== -->
+    <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+            <!-- Hero Image -->
+            <div class="col-10 col-sm-8 col-lg-6">
+                <img src="./images/Welcome.png" class="d-block mx-lg-auto img-fluid"
+                    alt="Welcome illustration for Pathfinder" width="700" height="500" loading="lazy">
+            </div>
 
+            <!-- Hero Text + Buttons -->
+            <div class="col-lg-6">
+                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Welcome to Pathfinder</h1>
+                <p class="lead">Helping students and professionals discover the career path that’s right for them.</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                    <!-- Keeping your custom colors -->
+                    <button type="button" class="btn btn-lg px-4 me-md-2 text-dark"
+                        style="background-color: var(--bs-primary-bg-subtle);">
+                        Login
+                    </button>
+                    <button type="button" class="btn btn-lg px-4 me-md-2 text-dark">
+                        Sign Up
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
+    <!-- =================== Card Section =================== -->
+    <div class="container my-5">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <!-- Card 1 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="./images/Explore.jpg" class="card-img-top" alt="Explore Careers">
+                    <div class="card-body">
+                        <h5 class="card-title">Explore Careers</h5>
+                        <p class="card-text">Find paths that match your strengths and passions.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Updated today</small>
+                    </div>
+                </div>
+            </div>
 
-    <!-- Link to scripts of your own -->
-    <!-- <script type="module" src="./src/main.js"></script> -->
+            <!-- Card 2 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="./images/Skills.jpg" class="card-img-top" alt="Skill Builder">
+                    <div class="card-body">
+                        <h5 class="card-title">Skill Builder</h5>
+                        <p class="card-text">Access resources to boost the skills needed for your journey.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Updated today</small>
+                    </div>
+                </div>
+            </div>
 
+            <!-- Card 3 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="./images/people-cyber.jpeg" class="card-img-top" alt="Community">
+                    <div class="card-body">
+                        <h5 class="card-title">Community</h5>
+                        <p class="card-text">Connect with students and mentors for guidance and support.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Updated today</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- =================== Footer =================== -->
+    <div class="container">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+            </ul>
+            <p class="text-center text-body-secondary">&copy; 2025 Pathfinder</p>
+        </footer>
+    </div>
+
+    <!-- =================== Scripts =================== -->
+    <script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
